

// 1. NHÓM USER & AUTHENTICATION
Table user_accounts {
  id INT [pk, note: 'Mã định danh duy nhất của tài khoản.']
  email NVARCHAR(255) [note: 'Email đăng nhập của người dùng, không được trùng.']
  username NVARCHAR(255) [note: 'Tên đăng nhập của người dùng, không được trùng.']
  password NVARCHAR(255) [note: 'Mật khẩu đã được mã hóa.']
  role NVARCHAR(50) [note: 'Vai trò của tài khoản: CUSTOMER, HOTEL_OWNER hoặc ADMIN.']
  enabled BIT [note: 'Trạng thái kích hoạt tài khoản.']
  otp NVARCHAR(255) [note: 'Mã OTP dùng để xác thực.']
  otp_expiry DATETIME2 [note: 'Thời gian hết hạn của OTP.']
  otp_type NVARCHAR(50) [note: 'Loại OTP: đăng ký, quên mật khẩu, đổi mật khẩu hoặc cập nhật hồ sơ.']
  created_at DATETIME2 [note: 'Thời gian tạo tài khoản.']
  updated_at DATETIME2 [note: 'Thời gian cập nhật tài khoản gần nhất.']
}


Table admins {
  id INT [pk, note: 'Mã định danh duy nhất của admin.']
  user_account_id INT [note: 'Khóa ngoại liên kết đến bảng user_accounts.']
  full_name NVARCHAR(255) [note: 'Họ và tên quản trị viên.']
  phone NVARCHAR(20) [note: 'Số điện thoại admin.']
}


Table customers {
  id INT [pk, note: 'Mã định danh duy nhất của khách hàng.']
  user_account_id INT [note: 'Khóa ngoại liên kết đến bảng user_accounts.']
  full_name NVARCHAR(255) [note: 'Họ và tên khách hàng.']
  phone NVARCHAR(20) [note: 'Số điện thoại khách hàng.']
  address NVARCHAR(500) [note: 'Địa chỉ khách hàng.']
  city NVARCHAR(100) [note: 'Thành phố của khách hàng.']
  country NVARCHAR(100) [note: 'Quốc gia của khách hàng.']
  date_of_birth DATE [note: 'Ngày sinh của khách hàng.']
  gender NVARCHAR(10) [note: 'Giới tính của khách hàng.']
}


Table hotel_owners {
  id INT [pk, note: 'Mã định danh duy nhất của chủ khách sạn.']
  user_account_id INT [note: 'Khóa ngoại liên kết đến bảng user_accounts.']
  full_name NVARCHAR(255) [note: 'Họ và tên chủ khách sạn.']
  phone NVARCHAR(20) [note: 'Số điện thoại chủ khách sạn.']
  address NVARCHAR(500) [note: 'Địa chỉ của chủ khách sạn. theo CCCD']
  id_card NVARCHAR(20) [note: 'Số căn cước hoặc chứng minh nhân dân.']
  tax_id NVARCHAR(20) [note: 'Mã số thuế cá nhân']
  verification_status NVARCHAR(50) [note: 'Trạng thái xác minh: PENDING, APPROVED, REJECTED hoặc RESUBMIT.']
  verified_at DATETIME2 [note: 'Thời gian được xác minh.']
  rejection_reason NVARCHAR(MAX) [note: 'Lý do bị từ chối xác minh.']
  id_card_document NVARCHAR(500) [note: 'Đường dẫn giấy tờ tùy thân.']
}


// 2. NHÓM QUẢN LÝ KHÁCH SẠN
Table hotel_verification_documents {
  id INT [pk, note: 'Mã định danh duy nhất của tài liệu.']
  hotel_owner_id INT [note: 'Khóa ngoại liên kết đến bảng hotel_owners.']
  hotel_id INT [note: 'Giấy tờ này thuộc khách sạn nào']
  phone NVARCHAR(20) [note: 'Số điện thoại khách sạn.']
  email NVARCHAR(255) [note: 'Email liên hệ của khách sạn.']
  business_registration_doc NVARCHAR(500) [note: 'Đường dẫn giấy đăng ký kinh doanh.']
  land_certificate_doc NVARCHAR(500) [note: 'Đường dẫn giấy chứng nhận quyền sử dụng đất.']
  rental_contract_doc NVARCHAR(500) [note: 'Đường dẫn hợp đồng thuê mặt bằng.']
  upload_status NVARCHAR(50) [note: 'Trạng thái tài liệu: UPLOADED, VERIFYING, VERIFIED hoặc REJECTED.']
  rejection_reason NVARCHAR(MAX) [note: 'Lý do tài liệu bị từ chối.']
  verified_at DATETIME2 [note: 'Thời gian tài liệu được xác minh.']
  created_at DATETIME2 [note: 'Thời gian tải tài liệu lên.']
}


Table hotel {
  id INT [pk, note: 'Mã định danh duy nhất của khách sạn.']
  owner_id INT [note: 'Khóa ngoại liên kết đến bảng hotel_owners.']
  name NVARCHAR(255) [note: 'Tên khách sạn.']
  address NVARCHAR(255) [note: 'Địa chỉ khách sạn.']
  city NVARCHAR(100) [note: 'Thành phố nơi khách sạn hoạt động.']
  district NVARCHAR(100) [note: 'Quận hoặc huyện của khách sạn.']
  image_url NVARCHAR(500) [note: 'Đường dẫn ảnh đại diện khách sạn.']
  description NVARCHAR(MAX) [note: 'Mô tả chi tiết khách sạn.']
  rating FLOAT [note: 'Điểm đánh giá trung bình của khách sạn.']
  total_reviews INT [note: 'Tổng số lượt đánh giá.']
  approval_status NVARCHAR(50) [note: 'Trạng thái duyệt khách sạn: PENDING, APPROVED, REJECTED hoặc INACTIVE.']
  active BIT [note: 'Trạng thái hoạt động của khách sạn.']
  approved_at DATETIME2 [note: 'Thời gian khách sạn được duyệt.']
  rejection_reason NVARCHAR(MAX) [note: 'Lý do khách sạn bị từ chối.']
  created_at DATETIME2 [note: 'Thời gian tạo khách sạn.']
  updated_at DATETIME2 [note: 'Thời gian cập nhật khách sạn gần nhất.']
}


Table hotel_facilities {
  id INT [pk, note: 'Mã định danh duy nhất của bản ghi tiện ích.']
  hotel_id INT [note: 'Khóa ngoại liên kết đến bảng hotel.']
  parking BIT
  restaurant BIT
  breakfast_available BIT
  fitness_centre BIT
  non_smoking_rooms BIT
  airport_shuttle BIT
  spa_wellness_centre BIT
  free_wifi BIT
  ev_charging_station BIT
  wheelchair_accessible BIT
  swimming_pool BIT
  bar_pub BIT
  rent_vehicle BIT
}


Table hotel_views {
  id INT [pk, note: 'Mã định danh duy nhất của bản ghi view.']
  hotel_id INT [note: 'Khóa ngoại liên kết đến bảng hotel.']
  city_view BIT
  beach_view BIT
  garden_view BIT
  pool_view BIT
  river_view BIT
  mountain_view BIT
}


Table promotions {
  id INT [pk, note: 'Mã định danh duy nhất của chương trình khuyến mãi.']
  hotel_id INT [note: 'Khóa ngoại liên kết đến bảng hotel.']
  title NVARCHAR(255)
  description NVARCHAR(MAX)
  discount_percent DECIMAL(5,2)
  start_date DATE
  end_date DATE
  status NVARCHAR(50)
  created_at DATETIME2
  updated_at DATETIME2
}


// 3. NHÓM QUẢN LÝ PHÒNG
Table room {
  id INT [pk, note: 'Mã định danh duy nhất của phòng.']
  hotel_id INT [note: 'Khóa ngoại liên kết đến bảng hotel.']
  room_type NVARCHAR(255)
  number_rooms INT
  description NVARCHAR(MAX)
  price DECIMAL(38,2)
  acreage FLOAT
  bed INT
  person INT
  num_window INT
  img_url NVARCHAR(500)
  room_status BIT
  created_at DATETIME2
  updated_at DATETIME2
}


Table room_facilities {
  id INT [pk, note: 'Mã định danh duy nhất của tiện ích phòng.']
  room_id INT [note: 'Khóa ngoại liên kết đến bảng room.']
  free_toiletries BIT
  shower BIT
  bathrobe BIT
  toilet BIT
  towels BIT
  slippers BIT
  hairdryer BIT
  toilet_paper BIT
  air_conditioning BIT
  safety_deposit_box BIT
  desk BIT
  television BIT
  telephone BIT
  iron BIT
  electric_kettle BIT
  cable_channels BIT
  wake_up_service BIT
  wardrobe_closet BIT
  clothes_rack BIT
  free_bottled_water INT
  created_at DATETIME2
  updated_at DATETIME2
}


// 4. NHÓM ĐẶT PHÒNG & THANH TOÁN
Table bookings {
  id INT [pk, note: 'Mã định danh duy nhất của đơn đặt phòng.']
  customer_id INT [note: 'Khóa ngoại liên kết đến bảng customers.']
  room_id INT [note: 'Khóa ngoại liên kết đến bảng room.']
  hotel_id INT [note: 'Khóa ngoại liên kết đến bảng hotel.']
  phone NVARCHAR(20)
  check_in_date DATE
  check_out_date DATE
  num_nights INT
  total_price DECIMAL(38,2)
  status NVARCHAR(50)
  special_notes NVARCHAR(MAX)
  created_at DATETIME2
}


Table payments {
  id INT [pk, note: 'Mã định danh duy nhất của thanh toán.']
  booking_id INT [note: 'Khóa ngoại liên kết đến bảng bookings.']
  amount DECIMAL(38,2)
  method NVARCHAR(50)
  status NVARCHAR(50)
  qr_code_url NVARCHAR(500)
  transaction_id NVARCHAR(255)
  paid_at DATETIME2
  created_at DATETIME2
  qr_expires_at DATETIME2
}


// 5. NHÓM TƯƠNG TÁC KHÁCH HÀNG
Table wishlists {
  id INT [pk, note: 'Mã định danh duy nhất của mục yêu thích.']
  customer_id INT [note: 'Khóa ngoại liên kết đến bảng customers.']
  room_id INT [note: 'Khóa ngoại liên kết đến bảng room.']
  check_in_date DATE
  check_out_date DATE
  added_at DATETIME2
}
//CHAT WITH HOTEL OWNER
Table messages {
  id INT [pk, note: 'Mã định danh duy nhất của tin nhắn.']
  sender_id INT [note: 'Khóa ngoại liên kết đến tài khoản người gửi.']
  receiver_id INT [note: 'Khóa ngoại liên kết đến tài khoản người nhận.']
  booking_id INT [note: 'Khóa ngoại liên kết đến bảng bookings.']
  hotel_id INT [note: 'Khóa ngoại liên kết đến bảng hotel.']
  content NVARCHAR(MAX)
  is_read BIT
  sent_at DATETIME2
}


Table feedback {
  id INT [pk, note: 'Mã định danh duy nhất của đánh giá.']
  customer_id INT [note: 'Khóa ngoại liên kết đến bảng customers.']
  hotel_id INT [note: 'Khóa ngoại liên kết đến bảng hotel.']
  room_id INT [note: 'Khóa ngoại liên kết đến bảng room.']
  user_full_name NVARCHAR(255)
  room_type NVARCHAR(255)
  comment NVARCHAR(1000)
  rating INT
  upvote INT [default: 0]
  downvote INT [default: 0]
  status NVARCHAR(50)
  created_at DATETIME2
  updated_at DATETIME2
}


Table feedback_votes {
  id INT [pk]
  feedback_id INT [note: 'Khóa ngoại liên kết đến bảng feedback.']
  customer_id INT [note: 'Khóa ngoại liên kết đến bảng customers.']
  vote_type NVARCHAR(10) [note: 'Loại vote: UPVOTE hoặc DOWNVOTE']
  created_at DATETIME2
}


Table feedback_replies {
  id INT [pk, note: 'Mã định danh duy nhất của phản hồi.']
  feedback_id INT [note: 'Khóa ngoại liên kết đến bảng feedback.']
  owner_id INT [note: 'Khóa ngoại liên kết đến bảng hotel_owners.']
  hotel_id INT [note: 'Khóa ngoại liên kết đến bảng hotel.']
  content NVARCHAR(1000)
  created_at DATETIME2
  updated_at DATETIME2
}






Table refunds {
  id INT [pk, note: 'Mã định danh duy nhất của lượt hoàn tiền.']
  booking_id INT [unique, note: 'Khóa ngoại liên kết 1-1 đến bảng bookings.']
  bank_name NVARCHAR(255) [note: 'Tên ngân hàng nhận hoàn tiền.']
  account_number NVARCHAR(50) [note: 'Số tài khoản nhận hoàn tiền.']
  account_holder NVARCHAR(255) [note: 'Tên chủ tài khoản.']
  refund_amount DECIMAL(38,2) [note: 'Số tiền hoàn lại cho khách hàng.']
  status NVARCHAR(50) [note: 'Trạng thái hoàn tiền: PENDING, PROCESSED, REJECTED.']
  note NVARCHAR(MAX) [note: 'Ghi chú xử lý hoàn tiền.']
  cancellation_reason NVARCHAR(1000) [note: 'Lý do hủy đặt phòng.']
  requested_at DATETIME2 [note: 'Thời điểm khách yêu cầu hoàn tiền.']
  processed_at DATETIME2 [note: 'Thời điểm hoàn tiền hoàn tất.']
}












// RELATIONSHIPS
Ref: refunds.booking_id - bookings.id
Ref: customers.user_account_id > user_accounts.id
Ref: hotel_owners.user_account_id > user_accounts.id
Ref: admins.user_account_id > user_accounts.id
Ref: hotel_verification_documents.hotel_owner_id > hotel_owners.id
Ref: hotel.owner_id > hotel_owners.id
Ref: hotel_facilities.hotel_id > hotel.id
Ref: hotel_views.hotel_id > hotel.id
Ref: promotions.hotel_id > hotel.id
Ref: room.hotel_id > hotel.id
Ref: room_facilities.room_id > room.id
Ref: bookings.customer_id > customers.id
Ref: bookings.room_id > room.id
Ref: bookings.hotel_id > hotel.id
Ref: payments.booking_id > bookings.id
Ref: wishlists.customer_id > customers.id
Ref: wishlists.room_id > room.id
Ref: messages.sender_id > user_accounts.id
Ref: messages.receiver_id > user_accounts.id
Ref: messages.booking_id > bookings.id
Ref: messages.hotel_id > hotel.id
Ref: feedback.customer_id > customers.id
Ref: feedback.hotel_id > hotel.id
Ref: feedback.room_id > room.id
Ref: feedback_replies.feedback_id > feedback.id
Ref: feedback_replies.owner_id > hotel_owners.id
Ref: feedback_votes.feedback_id > feedback.id
Ref: feedback_votes.customer_id > customers.id













